TPC-H Query 1 implemented in Java.